--- a/style.css
+++ b/style.css
@@ -50,11 +50,22 @@ body {
     background-color: black;
     border: 3px dashed rgb(255, 255, 0);
     padding: 25px;
-    display: grid;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     gap: 5px;
+    position: relative;
     overflow: auto;
     text-overflow: ellipsis;
+}
+
+.book-delete {
+    position: absolute;
+    left: 2%;
+    top: 3%;
+    border: 1px dotted red;
+    background-color: black;
+    color: red;
 }
 
 form {
