Fix form validation bug + add form cancel button

--- a/style.css
+++ b/style.css
@@ -68,6 +68,12 @@ body {
     color: red;
 }
 
+.cancel-form {
+    position: absolute;
+    top: 3%;
+    right: 2%;
+}
+
 form {
     display: flex;
     flex-direction: column;
