--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ body {
 .logo {
     display: flex;
     justify-content: center;
-    align-items: end;
-    background-color: rgb(0, 0, 0);
+    align-items: center;
+    background-color: #001D3D;
     color: rgb(255, 255, 255);
-    font-size: 48px;
+    font-size: 64px;
 }
 
 .logo > img {
-    width: 48px;
-    height: 48px;
+    width: 64px;
+    height: 64px;
     filter: invert();
 }
 
@@ -30,9 +30,9 @@ body {
     background-color: rgb(255, 255, 255);
     justify-self: center;
     align-self: end;
-    width: 40px;
-    height: 40px;
-    border: 2px solid black;
+    width: 54px;
+    height: 54px;
+    border: 0;
     border-radius: 50%;
 }
 
@@ -46,9 +46,9 @@ body {
 }
 
 .main-container {
-    background-color: rgb(17, 17, 17);
+    background-color: #003566;
     display: grid;
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 64px 1fr;
 }
 
 .books {
@@ -62,7 +62,7 @@ body {
 
 .book {
     color: white;
-    background-color: black;
+    background-color: #000814;
     border: 2px solid rgb(255, 255, 255);
     padding: 25px;
     display: flex;
@@ -70,24 +70,26 @@ body {
     justify-content: center;
     gap: 5px;
     position: relative;
-    word-break: break-all;
     height: fit-content;
+    word-break: break-all;
+    font-size: 24px;
 }
 
 .book-delete {
     position: absolute;
-    left: 1%;
+    right: 1%;
     top: 2%;
     border: 0;
-    width: 20px;
-    height: 20px;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: black;
-    color: white;
+}
+
+.book-delete > img {
+    filter: invert();
+    width: 100%;
+    height: 100%;
 }
 
 #read-toggle {
@@ -108,60 +110,43 @@ body {
     color: red;
 }
 
-.book-delete > img {
-    filter: invert();
-    width: 100%;
-    height: 100%;
-}
-
-.toggle-button {
-    left: 8%;
-}
-
-.book-delete:hover {
-    filter: invert();
-}
-
-.toggle-button:hover {
-    border: 2px solid rgb(0, 255, 0);
-    color: rgb(0, 255, 0);
-}
-
 #book-form {
     text-transform: capitalize;
+    display: none;
+    gap: 8px;
+    background-color: rgb(0, 0, 0);
+    border: 2px double white;
+    color: white;
+    padding: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
 }
 
 #book-form > button[type='submit'] {
     position: absolute;
     bottom: 3%;
     right: 3%;
+    font-size: 18px;
 }
 
 .cancel-form {
     position: absolute;
-    top: 2%;
-    right: 1%;
+    font-size: 20px;
+    top: 3%;
+    right: 2%;
     padding: 2px;
-    border: 1px solid white;
+    border: 0;
     background-color: black;
     color: white;
 }
 
-.cancel-form:hover, button[type='submit']:hover {
+.cancel-form:hover, 
+button[type='submit']:hover,
+.book-delete:hover {
     filter: invert();
-}
-
-#book-form {
-    display: none;
-    gap: 8px;
-    background-color: rgb(0, 0, 0);
-    border: 2px solid white;
-    color: white;
-    padding: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
  
 .form-field {
@@ -169,12 +154,11 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 4px;
-    width: 100%;
-} 
+}
 
 .form-field > input {
-    background-color: rgb(0, 0, 0);
-    border: 1px solid white;
+    background-color: rgb(43, 43, 43);
+    border: 0;
     color: white;
     padding: 4px;
 }
@@ -193,3 +177,9 @@ button[type='submit'] {
     font-weight: bold;
 }
 
+.form-title {
+    text-align: center;
+    font-weight: bold;
+    font-size: 32px;
+    margin-bottom: 16px;
+}
